# roerei

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  cmake-linux.sh
src/roerei/: CMakeLists.txt  bl_sparse_matrix.hpp  cli.hpp  cli_exec.cpp  cli_options.hpp  cli_read.cpp  common.hpp  compact_sparse_matrix.hpp  cpp14_fix.hpp  create_map.hpp  cv.hpp  cv_result.hpp  dataset.hpp  dependencies.hpp  deserialize_common.hpp  deserialize_fusion.hpp  diff.hpp  distance.hpp  encapsulated_vector.hpp  exporter.cpp  exporter.hpp  generator.hpp  inspector.hpp  knn.hpp  legacy.cpp  legacy.hpp  main.cpp  mapping.hpp  math.hpp  msgpack_deserializer.hpp  multitask.hpp  naive_bayes.hpp  normalize.hpp  partition.hpp  performance.hpp  sampler.hpp  serialize_fusion.hpp  sliced_sparse_matrix.hpp  sparse_matrix.hpp  sparse_unit_matrix.hpp  (+7 more)
src/roerei/export/: csv_dump.hpp  data_dump.hpp  latex_tabular.hpp
src/roerei/generic/: bl_sparse_matrix.hpp  common.hpp  compact_sparse_matrix.hpp  create_map.hpp  encapsulated_array.hpp  encapsulated_vector.hpp  full_matrix.hpp  full_unit_matrix.hpp  id_t.hpp  jit_matrix.hpp  math.hpp  multitask.hpp  set_operations.hpp  sliced_sparse_matrix.hpp  sparse_matrix.hpp  sparse_readonly_unit_matrix.hpp  sparse_unit_matrix.hpp  split_sparse_matrix.hpp  wl_sparse_matrix.hpp
src/roerei/ml/: adarank.hpp  cv.hpp  ensemble.hpp  knn.hpp  knn_adaptive.hpp  ml_type.hpp  naive_bayes.hpp  omniscient.hpp  posetcons_canonical.hpp  posetcons_optimistic.hpp  posetcons_pessimistic.hpp  posetcons_type.hpp
src/roerei/util/: fast_log.hpp  guard.hpp  (+3 more)
(+34 files in other folders)
